@@ -271,9 +271,6 @@ fi
 fi
 IT_CP39408_JAVAH
 FIND_RHINO_JAR
-FIND_BCEL_JAR
-FIND_XPP3_JAR
-FIND_JIBX_DIR
 WITH_OPENJDK_SRC_ZIP
 WITH_HOTSPOT_SRC_ZIP
 WITH_CORBA_SRC_ZIP
@@ -286,6 +283,7 @@ WITH_ALT_JAR_BINARY
 AC_CHECK_ENABLE_CACAO
 AC_CHECK_WITH_CACAO_HOME
 AC_CHECK_WITH_CACAO_SRC_ZIP
+AC_CHECK_ENABLE_NIMBUS
 ENABLE_OPTIMIZATIONS
 SET_SHARK_BUILD
 ENABLE_ZERO_BUILD
@@ -318,6 +316,13 @@ fi
 if test "x${enable_pulse_java}" = "xyes"
 then
   FIND_PULSEAUDIO
+fi
+
+if test "x${ENABLE_NIMBUS}" = "xyes"
+then
+FIND_BCEL_JAR
+FIND_XPP3_JAR
+FIND_JIBX_DIR
 fi
 
 dnl pkgconfig cannot be used to find these headers and libraries.
